<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">MPD</string>
    <string name="notification_title_mpd_running">Music Player Daemon is running</string>
    <string name="notification_text_mpd_running">Touch for MPD options.</string>
    <string name="toggle_button_run_on">MPD is running</string>
    <string name="toggle_button_run_off">MPD is not running</string>
    <string name="checkbox_run_on_boot">Run MPD automatically on boot</string>
    <string name="checkbox_wakelock">Prevent suspend when MPD is running (Wakelock)</string>
    <string name="checkbox_pause_on_headphones_disconnect">Pause MPD when headphones disconnect</string>
    <string name="external_files_permission_request">MPD requires access to external files to play local music. Please grant the permission.</string>
    <string name="title_open_app_info">Open app info</string>
    <string name="mpd_load_failure_message">"Failed to load the native MPD library.
Report this problem to us, and include the following information:
SUPPORTED_ABIS=%1$s
PRODUCT=%2$s
FINGERPRINT=%3$s
error=%4$s"
  </string>
    <string name="stopped">Stopped</string>
    <string name="running">Running</string>
    <string name="stopMPD">Stop MPD</string>
    <string name="startMPD">Start MPD</string>
</resources>
